--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
     line-height: 1.6;
     color: #333;
     background-color: #f5f5f5;
+        padding-top: 80px;  /* space for sticky navbar*/
+     }
 }
 
 /* ======================
@@ -225,6 +227,7 @@ body.dark nav {
 body.dark footer {
     background-color: #161b22;
 }
+
 
 
 
